--- a/app/assets/stylesheets/cli/sign_up.scss
+++ b/app/assets/stylesheets/cli/sign_up.scss
@@ -9,6 +9,10 @@
     font-size: 0.875rem;
     margin-bottom: 1rem;
   }
+
+  .location-radio-button [type='radio'] {
+    margin-bottom: 0;
+  }
 }
 
 .user-date-of-birth {
