--- a/app/views/custom/users/registrations/new.html.erb
+++ b/app/views/custom/users/registrations/new.html.erb
@@ -25,6 +25,11 @@
 
   <li>
     <h4><%= t('custom.sign_up.new.bullet_3') %></h4>
+    <p><%= t('custom.sign_up.new.bullet_3_text') %></p>
+  </li>
+
+  <li>
+    <h4><%= t('custom.sign_up.new.bullet_4') %></h4>
   </li>
 </ol>
 
