--- a/app/views/custom/account/show.html.erb
+++ b/app/views/custom/account/show.html.erb
@@ -28,7 +28,8 @@
                 <%= f.text_field :phone_number, placeholder: t("account.show.phone_number_label") %>
 
               <% else %>
-                <%= f.text_field :username, maxlength: User.username_max_length, placeholder: t("account.show.username_label") %>
+                <%= f.text_field :first_name, disabled: true %>
+                <%= f.text_field :last_name, disabled: true %>
               <% end %>
             </div>
 
