--- a/app/views/custom/account/show.html.erb
+++ b/app/views/custom/account/show.html.erb
@@ -96,8 +96,23 @@
             <p><%= t("account.show.user_permission_info") %></p>
 
             <ul>
-              <li><span class="icon-check"></span>&nbsp;<%= t("account.show.user_permission_debates") %></li>
-              <li><span class="icon-check"></span>&nbsp;<%= t("account.show.user_permission_proposal") %></li>
+              <li>
+                <% if current_user.level_two_or_three_verified? %>
+                  <span class="icon-check"></span>
+                <% else %>
+                  <span class="icon-x"></span>
+                <% end %>
+                <%= t("account.show.user_permission_debates") %>
+              </li>
+
+              <li>
+                <% if current_user.level_two_or_three_verified? %>
+                  <span class="icon-check"></span>
+                <% else %>
+                  <span class="icon-x"></span>
+                <% end %>
+                <%= t("account.show.user_permission_proposal") %>
+              </li>
               <li>
                 <% if current_user.level_two_or_three_verified? %>
                   <span class="icon-check"></span>
