--- a/app/views/cli/welcome/_header.html.erb
+++ b/app/views/cli/welcome/_header.html.erb
@@ -15,6 +15,14 @@
         <span class='welcome-hashtag'><%= sanitize(t('cli.welcome.hashtag')) %></span>
       </div>
     </div>
+    <div class="buttons">
+      <button type="button" class="full-button">
+        <%= link_to t('cli.welcome.buttons.start_survey'), "#survey" %>
+      </button>
+      <button type="button" class="hollow-button">
+        <%= link_to t('cli.welcome.buttons.infomaterial'), "#infomaterial" %>
+      </button>
+    </div>
   </div>
 
 <% end %>
