--- a/app/assets/stylesheets/cli/welcome.scss
+++ b/app/assets/stylesheets/cli/welcome.scss
@@ -7,7 +7,7 @@
 
   .buttons {
     text-align: center;
-    display: none;
+    margin-top: 120px;
 
     button {
       padding: 0.75rem;
@@ -33,15 +33,22 @@
       border: 1px solid $white;
       padding: calc(0.75rem - 1px);
       margin-left: 0.2em;
+      display: none;
     }
 
     @media only screen and (min-width: 550px) {
-      display: block;
+      button.hollow-button {
+        display: inline-block;
+      }
       margin-top: 140px;
     }
 
     @media only screen and (min-width: 640px) {
       margin-top: 200px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      margin-top: 230px;
     }
 
     @media only screen and (min-width: 1280px) {
@@ -121,17 +128,21 @@ span.hashtag-text {
 }
 
 .typeform-widget {
-  height: 843px;
+  height: 700px;
+
+  @media only screen and (min-width: 375px) {
+    height: 580px;
+  }
 
   @media only screen and (min-width: 450px) {
-    height: 775px;
+    height: 560px;
+  }
+
+  @media only screen and (min-width: 550px) {
+    height: 480px;
   }
 
   @media only screen and (min-width: 635px) {
-    height: 850px;
-  }
-
-  @media only screen and (min-width: 1065px) {
-    height: 900px;
+    height: 640px;
   }
 }
