--- a/app/views/cli/welcome/index.html.erb
+++ b/app/views/cli/welcome/index.html.erb
@@ -24,6 +24,14 @@
     </div>
   </div>
 
+  <div class="hide-for-small-only">
+    <div class='row'>
+      <div class='column'>
+        <%= image_tag 'timeline-eurezeit.png' %>
+      </div>
+    </div>
+  </div>
+
   <% if @cards.any? %>
     <div id="infomaterial" class="infomaterial">
       <div class="row">
