link_to debates on homepage

--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -32,7 +32,7 @@
       <div class='content'>
         <h1>Tausche dich aus</h1>
         <%=render_custom_block 'home_page_2' %>
-        <%= link_to debates_path do %>
+        <%= link_to "/debates?projekts=150" do %>
           <button type="button" class='red'>diskutiere mit</button>
         <% end %>
       </div>
