replace pass image

--- a/app/views/custom/users/registrations/user_details.html.erb
+++ b/app/views/custom/users/registrations/user_details.html.erb
@@ -85,7 +85,7 @@
       <div class='column small-12 medium-6'>
         <label><%= t('custom.sign_up.user_details.pass_label') %></label>
         <p><%= t('custom.sign_up.user_details.pass_help') %></p>
-        <%= image_tag 'pass.jpg' %>
+        <%= image_tag 'pass_new.png' %>
       </div>
     </div>
   <% end %>
