--- a/app/views/cli/welcome/index.html.erb
+++ b/app/views/cli/welcome/index.html.erb
@@ -24,7 +24,7 @@
   <div class="row cards">
     <% if @cards.any? %>
       <div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
-        <%= render "cards" %>
+        <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
       </div>
     <% end %>
 
