--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -4,6 +4,31 @@ main {
 }
 
 
+body > header, .wrapper > header, .top-bar {
+  background-color: $white;
+}
+
+.top-bar {
+  img.secondary-logo {
+    width: 93px;
+    margin-right: 1rem;
+  }
+
+  h2.header-title {
+    color: $brand; 
+    flex-grow: 1;
+  }
+
+  .top-bar-title  {
+    img.main-logo {
+      width: 100px;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+
 .debate .panel, .proposal .panel, .investment-project .panel, .budget-investment .panel, .legislation .panel, .communities-show .panel, .process-summary .debate-summary, .process-summary .proposal-summary, .process-summary .annotation-summary {
   background-color: $module-index-panel-background;
 }
@@ -17,4 +42,16 @@ main {
 
 html.is-reveal-open body {
   overflow-y: visible !important;
+}
+
+
+
+// Footer
+
+.footer {
+  background: #030B1C;
+}
+
+footer, .footer, footer a, footer a:active, footer a:focus {
+  color: $white;
 }
