--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -1,19 +1,11 @@
 <header>
-  <% if display_remote_translation_info?(@remote_translations, I18n.locale) %>
-    <%= render "shared/remote_translations_button", remote_translations: @remote_translations %>
-  <% end %>
-
-  <div class="top-links">
-    <div class="row">
-      <%= render "shared/locale_switcher" %>
-      <div class="hide-for-small-only">
-        <%= render "shared/top_links" %>
-      </div>
-    </div>
-  </div>
-
   <div class="row">
     <div class="top-bar">
+      <%= link_to root_path do %>
+        <%= image_tag(image_path_for("logo_left.png"), class: "float-left secondary-logo hide-for-small-only", alt: t("layouts.header.logo")) %>
+      <% end %>
+
+      <h2 class='header-title hide-for-small-only'>Deinen Ort bewegen!</h2>
 
       <span data-responsive-toggle="responsive-menu" data-hide-for="medium" class="hamburger-menu">
         <span class="menu-icon dark" data-toggle></span>
@@ -21,7 +13,7 @@
 
       <div class="top-bar-title">
         <%= link_to root_path, accesskey: "0" do %>
-          <%= image_tag(image_path_for("logo_header.png"), class: "float-left", alt: t("layouts.header.logo")) %>
+          <%= image_tag(image_path_for("logo_header_main.png"), class: "float-left main-logo", alt: t("layouts.header.logo")) %>
         <% end %>
       </div>
 
