--- a/app/assets/stylesheets/custom/gdpr-notice.scss
+++ b/app/assets/stylesheets/custom/gdpr-notice.scss
@@ -6,6 +6,7 @@
   background: lighten($brand, 70%);
   border-top: 1px solid $brand;
   padding: 2em 0;
+  color: black;
 
   @media screen and (min-width: 40em) {
     padding: 2em 20%;
