--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -3,13 +3,9 @@
   <style>
     <%if header_large%>
       .home-page .jumbo{
-        background-image: linear-gradient(90deg, 
-                            rgba(34, 34, 34, 0.75) 35%, 
-                            rgba(34, 34, 34, 0.65) 50%,
-                            rgba(34, 34, 34, 0.0)),
-                          url("<%=header_large.image.attachment.url%>");
+        background-image: url("<%=header_large.image.attachment.url%>");
         background-size: cover;
-        background-position: center 25%;
+        background-position: center 67%;
       }
     <%end%>
   </style>
