--- a/app/views/custom/shared/projekt_sidebar_filter/_projekts_filter.html.erb
+++ b/app/views/custom/shared/projekt_sidebar_filter/_projekts_filter.html.erb
@@ -10,8 +10,8 @@
         <%= check_box_tag dom_id(projekt), projekt.id, checkbox_checked, { class: 'js-filter-projekt', tabindex: "-1" }  %>
         <span aria-label="<%= t('custom.links.projekts_filter.projekt_name', projekt_name: projekt.name ) %>" ><%= projekt.name %></span>
         <%= "(#{aggregations[projekt.id]})" if aggregations[projekt.id].present?  %>
-        <% resource_count = projekt.count_resources(params[:controller]) %>
-        <span aria-label="<%= t('custom.links.projekts_filter.resource_count', resource_count: resource_count) %>"> <%= "(#{resource_count})" %> </span>
+        <% resource_count = projekt.count_resources(params[:controller]) unless params[:controller] == 'search' %>
+        <span aria-label="<%= t('custom.links.projekts_filter.resource_count', resource_count: resource_count) %>"> <%= "(#{resource_count})" unless params[:controller] == 'search' %> </span>
         <span class="checkmark focusable js-prevent-key-scroll js-access-toggle-projekt-filter-checkbox" tabindex="0"></span>
         <span class="color-code" <%= "style=background-color:#{projekt_color}" if projekt_color.present? %> ></span>
       <% end %>
