--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -14,15 +14,19 @@
 <main>
   <%= render "header", header: @header %>
 
-  <%= render "feeds" %>
+  <div class="row">
+    <div class="column medium-8 small-centered">
+      <%= render "feeds" %>
+    </div>
+  </div>
 
   <div class="row">
     <div class="column medium-8 small-centered">
       <div class=intro-text>
-				<%=render_custom_block 'home_page_1' %>
+        <%=render_custom_block 'homepage_block_1' %>
       </div>
-		</div>
-	</div>
+    </div>
+  </div>
 
   <% if @active_projekt_cards.any? %>
     <div class="row">
@@ -41,23 +45,23 @@
   <% end %>
 
   <div class="row">
-		<div class="column medium-8 small-centered">
-			<% if @cards.any? %>
-				<div class="row">
-					<div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
-						<%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
-					</div>
-				</div>
-			<% end %>
+    <div class="column medium-8 small-centered">
+      <% if @cards.any? %>
+        <div class="row">
+          <div class="small-12 column <%= "large-8" if feed_processes_enabled? %>">
+            <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
+          </div>
+        </div>
+      <% end %>
 
-			<% if feed_processes_enabled? %>
-				<div class="row">
-					<div class="small-12 large-4 column">
-						<%= render "processes" %>
-					</div>
-				</div>
-			<% end %>
-		</div>
+      <% if feed_processes_enabled? %>
+        <div class="row">
+          <div class="small-12 large-4 column">
+            <%= render "processes" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 
 
