--- a/app/assets/stylesheets/cli/menu.scss
+++ b/app/assets/stylesheets/cli/menu.scss
@@ -23,6 +23,11 @@
 }
 
 @media screen and (min-width: 40em) {
+  .subnavigation ul.main-menu li.top-level-item > ul.nav-flyout-block {
+    border-top: none;
+  }
+
+
   #responsive-menu {
     display: none !important;
   }
