--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -17,11 +17,11 @@
       text-decoration: none;
       font-weight: normal;
       margin-bottom: 0;
+      margin-top: 0.5rem;
       font-size: 1rem;
     }
 
     a {
-      background: linear-gradient(to top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.2) 40%);
       display: inline-block;
     }
   }
