--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,5 +1,5 @@
 // brand_color
-$brand:                                           #004a83;
+$brand:                                           #002C77;
 $secondary:                                       lighten($brand, 70%);
 $accent:                                          lighten($brand, 50%);
 $dark:                                            darken($brand, 10%);
@@ -51,8 +51,8 @@ $welcomespan:                 $brand;
 
 
 // fonts
-$body-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
-$header-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
+$body-font-family: "OpenSans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+$header-font-family: "OpenSans","HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif !important;
 $base-font-size:      16px;
 
 // Regular 
