--- a/app/views/custom/map_locations/_form_fields.html.erb
+++ b/app/views/custom/map_locations/_form_fields.html.erb
@@ -1,7 +1,7 @@
 <%= form.label :map_location, label %>
 <p class="help-text" id="tag-list-help-text"><%= help %></p>
 
-<% if @proposal.map_location.present? %>
+<% if @proposal.present? && @proposal.map_location.present? %>
   <%= render_map(map_location, parent_class, editable = true, remove_marker_label, [ @proposal.map_location.json_data ] ) %>
 <% else %>
   <%= render_map(map_location, parent_class, editable = true, remove_marker_label ) %>
