--- a/app/views/custom/shared/sidebar_filter/_geozone_affiliations.html.erb
+++ b/app/views/custom/shared/sidebar_filter/_geozone_affiliations.html.erb
@@ -1,4 +1,4 @@
-<% resource_name = @resource_name.capitalize.constantize.model_name.human count: :other %>
+<% resource_name ||= @resource_name.capitalize.constantize.model_name.human count: :other %>
 
 <div class="sidebar-divider"></div>
 
