--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -1,21 +1,9 @@
-<% if header.present? %>
-  <%header_large = Widget::Card.header.find_by title: "header_large" %>
-  <style>
-    <%if header_large%>
-      .home-page .jumbo{
-        background-image: url("<%=header_large.image.attachment.url%>");
-        background-size: cover;
-        background-position: center 67%;
-      }
-    <%end%>
-  </style>
-
-  <div class="jumbo highlight">
-    <div class="row">
-      <div class="column">
-      </div>
-    </div>
-  </div>
-
-  <div class="background-header"></div>
-<% end %>
+<div class='hero-wrapper'>
+  <%= video_tag 'https://cli-ush.s3.eu-central-1.amazonaws.com/Imagefilm_USH.mp4',
+    autoplay: true,
+    loop: true,
+    muted: true,
+    controls: true,
+    controlsList: "nodownload nofullscreen noremoteplayback",
+    disablepictureinpicture: true  %>
+</div>
