--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -17,8 +17,7 @@
   <div class="row">
     <div class="column medium-8 small-centered">
       <div class=intro-text>
-        <h2>Deinen Ort bewegen!</h2>
-        <p>Diese digitale Beteiligung ist Teil eines Beteiligungsprozesses vor Ort in Deiner Kommune. Wähle Deine Kommune aus, registriere Dich und mach mit! Je mehr Menschen sich beteiligen, desto mehr Aussagekraft bekommen die Ergebnisse. Wir freuen uns auf Deine Beteiligung, viel Spaß beim Mitgestalten!</p>
+        <%=render_custom_block 'home_page_1' %>
       </div>
 
       <% if @cards.any? %>
