--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -1,5 +1,5 @@
 <div class='hero-wrapper'>
-  <%= video_tag 'https://cli-ush.s3.eu-central-1.amazonaws.com/Imagefilm_USH.mp4',
+  <%= video_tag 'https://cli-ush.s3.eu-central-1.amazonaws.com/Versuch5.mp4',
     autoplay: true,
     loop: true,
     muted: true,
