--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -3,6 +3,7 @@
 @import "settings";
 @import "consul_settings";
 @import "custom_settings";
+@import "custom_fonts";
 @import "foundation";
 
 @import "motion-ui/motion-ui";
