--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -50,8 +50,8 @@ $welcomespan:                 $brand;
 
 
 // fonts
-$body-font-family: 'MyriadPro', Helvetica, Arial, sans-serif;
-$header-font-family: 'MyriadPro', Helvetica, Arial, sans-serif !important;
+$body-font-family: MyriadPro, Helvetica, Arial, sans-serif;
+$header-font-family: MyriadPro, Helvetica, Arial, sans-serif;
 $base-font-size:      16px;
 
 // Regular 
