--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -16,9 +16,7 @@
 
   <div class="row">
     <div class="column medium-8 small-centered">
-      <div class=intro-text>
-        <%=render_custom_block 'home_page_1' %>
-      </div>
+      <%=render_custom_block 'home_page_1' %>
     </div>
   </div>
 
@@ -55,6 +53,18 @@
           </div>
         </div>
       <% end %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column medium-8 small-centered">
+      <%=render_custom_block 'home_page_2' %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="column medium-8 small-centered">
+      <%=render_custom_block 'home_page_3' %>
     </div>
   </div>
 
