--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -26,7 +26,7 @@ $flyout-item-projekt-min-height:                  60px;
 $responsive-menu-text-color:                      $dark;
 $responsive-menu-background-color:                $white;
 
-$module-index-panel-background:                   lighten($brand, 70%);
+$module-index-panel-background:                   #f9f9f9;
 
 
 
