--- a/app/views/custom/welcome/_cards.html.erb
+++ b/app/views/custom/welcome/_cards.html.erb
@@ -1,6 +1,4 @@
-<h3 class="title card-title"><%= section_title %></h3>
-
-<div class="row" data-equalizer data-equalizer-on="medium">
+<div class="row cards-homepage" data-equalizer data-equalizer-on="medium">
   <% cards.each do |card| %>
     <%= render "card", card: card %>
   <% end %>
