--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -3,7 +3,7 @@ $fblue:                                           #004F9F;
 $fred:                                            #CD1719;
 
 $brand:                                           $fblue;
-$secondary:                                       lighten($brand, 70%);
+$secondary:                                       #f1f1f1;
 $accent:                                          lighten($brand, 50%);
 $dark:                                            darken($brand, 10%);
 
